[package]
name = "traffic-sim"
version = "0.1.0"
authors = ["Alexander Rafferty <hello@alexanderrafferty.com>"]
edition = "2021"
description = "A simple traffic simulation package focussed on performance and realism."
license = "GPL-3.0-or-later"
repository = "https://github.com/Rafferty97/traffic-simple"

[dependencies]
slotmap = { version = "1.0.6", features = ["serde"] }
cgmath = { version = "0.18.0", features = ["serde"] }
smallvec = { version = "1.5.1", features = ["serde"] }
serde = "1.0.117"
assert_approx_eq = "1.1.0"
rand = "0.8.4"
once_cell = "1.10.0"
log = "0.4.14"
itertools = "0.10.3"
serde_json = "1.0.82"